--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
 .App {
   text-align: center;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bolder;
+  font-size: 16px;
 }
 
 .App-logo {
